deploy: julianbrooks/comp2850-hci-mdbook@00f42b3a42fd353d1942ca40863f3d03b7b90f5d

--- a/assessment/task1.html
+++ b/assessment/task1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="en" class="light sidebar-visible" dir="ltr">
+<html lang="en" class="navy sidebar-visible" dir="ltr">
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
@@ -38,7 +38,7 @@
         <!-- Provide site root and default themes to javascript -->
         <script>
             const path_to_root = "../";
-            const default_light_theme = "light";
+            const default_light_theme = "navy";
             const default_dark_theme = "navy";
             window.path_to_searchindex_js = "../searchindex.js";
         </script>
@@ -81,7 +81,7 @@
             try { theme = localStorage.getItem('mdbook-theme'); } catch(e) { }
             if (theme === null || theme === undefined) { theme = default_theme; }
             const html = document.documentElement;
-            html.classList.remove('light')
+            html.classList.remove('navy')
             html.classList.add(theme);
             html.classList.add("js");
         </script>
@@ -627,8 +627,8 @@ A: Yes, but you miss Week 9 Lab 2 time for data verification. Use the full 2 wee
 </ul>
 <h3 id="week-9-lab-materials"><a class="header" href="#week-9-lab-materials">Week 9 Lab Materials</a></h3>
 <ul>
-<li><a href="../../wk09/src/wk9-lab1-eval-plan-instrumentation.html">Week 9 Lab 1: Evaluation Planning &amp; Instrumentation</a></li>
-<li><a href="../../wk09/src/wk9-lab2-pilots-debrief-draft.html">Week 9 Lab 2: Peer Pilots, Debrief, and Task 1 Draft Pack</a></li>
+<li><a href="../../wk09/wk9-lab1-eval-plan-instrumentation.html">Week 9 Lab 1: Evaluation Planning &amp; Instrumentation</a></li>
+<li><a href="../../wk09/wk9-lab2-pilots-debrief-draft.html">Week 9 Lab 2: Peer Pilots, Debrief, and Task 1 Draft Pack</a></li>
 </ul>
 <hr />
 <h2 id="quick-checklist"><a class="header" href="#quick-checklist">Quick Checklist</a></h2>
