--- a/assessment/task2.html
+++ b/assessment/task2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="en" class="light sidebar-visible" dir="ltr">
+<html lang="en" class="navy sidebar-visible" dir="ltr">
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
@@ -38,7 +38,7 @@
         <!-- Provide site root and default themes to javascript -->
         <script>
             const path_to_root = "../";
-            const default_light_theme = "light";
+            const default_light_theme = "navy";
             const default_dark_theme = "navy";
             window.path_to_searchindex_js = "../searchindex.js";
         </script>
@@ -81,7 +81,7 @@
             try { theme = localStorage.getItem('mdbook-theme'); } catch(e) { }
             if (theme === null || theme === undefined) { theme = default_theme; }
             const html = document.documentElement;
-            html.classList.remove('light')
+            html.classList.remove('navy')
             html.classList.add(theme);
             html.classList.add("js");
         </script>
@@ -848,10 +848,10 @@ A: Minimum 2 required. Start recruiting early (Week 10). Use lab sessions to fin
 </ul>
 <h3 id="week-10-11-lab-materials"><a class="header" href="#week-10-11-lab-materials">Week 10-11 Lab Materials</a></h3>
 <ul>
-<li><a href="../../wk10/src/wk10-lab1-analysis-prioritisation.html">Week 10 Lab 1: Analysis &amp; Prioritisation</a></li>
-<li><a href="../../wk10/src/wk10-lab2-redesign-reverify-package.html">Week 10 Lab 2: Redesign, Re-verification, Package</a></li>
-<li><a href="../../wk11/src/wk11-lab1-studio-crit.html">Week 11 Lab 1: Studio Critique</a></li>
-<li><a href="../../wk11/src/wk11-lab2-wrapup-portfolio.html">Week 11 Lab 2: Wrap-up &amp; Portfolio</a></li>
+<li><a href="../../wk10/wk10-lab1-analysis-prioritisation.html">Week 10 Lab 1: Analysis &amp; Prioritisation</a></li>
+<li><a href="../../wk10/wk10-lab2-redesign-reverify-package.html">Week 10 Lab 2: Redesign, Re-verification, Package</a></li>
+<li><a href="../../wk11/wk11-lab1-studio-crit.html">Week 11 Lab 1: Studio Critique</a></li>
+<li><a href="../../wk11/wk11-lab2-wrapup-portfolio.html">Week 11 Lab 2: Wrap-up &amp; Portfolio</a></li>
 </ul>
 <hr />
 <h2 id="quick-checklist"><a class="header" href="#quick-checklist">Quick Checklist</a></h2>
