--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="en" class="light sidebar-visible" dir="ltr">
+<html lang="en" class="navy sidebar-visible" dir="ltr">
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
@@ -38,7 +38,7 @@
         <!-- Provide site root and default themes to javascript -->
         <script>
             const path_to_root = "";
-            const default_light_theme = "light";
+            const default_light_theme = "navy";
             const default_dark_theme = "navy";
             window.path_to_searchindex_js = "searchindex.js";
         </script>
@@ -81,7 +81,7 @@
             try { theme = localStorage.getItem('mdbook-theme'); } catch(e) { }
             if (theme === null || theme === undefined) { theme = default_theme; }
             const html = document.documentElement;
-            html.classList.remove('light')
+            html.classList.remove('navy')
             html.classList.add(theme);
             html.classList.add("js");
         </script>
@@ -201,12 +201,12 @@
 <h3 id="weeks-1-5-object-oriented-programming-oop"><a class="header" href="#weeks-1-5-object-oriented-programming-oop">Weeks 1-5: Object-Oriented Programming (OOP)</a></h3>
 <p>Foundation in Kotlin, classes, inheritance, interfaces. See <a href="https://python33r.github.io/comp2850-kotlin/index.html">OOP mdBook</a>.</p>
 <h3 id="weeks-6-11-human-computer-interaction-hci"><a class="header" href="#weeks-6-11-human-computer-interaction-hci">Weeks 6-11: Human-Computer Interaction (HCI)</a></h3>
-<p><strong><a href="wk06/src/wk6-lab1-html-css-htmx.html">Week 6</a></strong> — Intro: Server-first foundations + needs-finding</p>
-<p><strong><a href="wk07/src/wk7-lab1-ethics-inline-edit.html">Week 7</a></strong> — Ethics in practice + accessibility audit</p>
-<p><strong><a href="wk08/src/wk8-lab1-prototyping-constraints.html">Week 8</a></strong> — Prototyping, constraints, no-JS parity</p>
-<p><strong><a href="wk09/src/wk9-lab1-eval-plan-instrumentation.html">Week 9</a></strong> — Evaluation planning + instrumentation</p>
-<p><strong><a href="wk10/src/wk10-lab1-analysis-prioritisation.html">Week 10</a></strong> — Analysis, prioritisation, redesign</p>
-<p><strong><a href="wk11/src/wk11-lab1-studio-crit.html">Week 11</a></strong> — Studio critique + portfolio wrap-up</p>
+<p><strong><a href="wk06/wk6-lab1-html-css-htmx.html">Week 6</a></strong> — Intro: Server-first foundations + needs-finding</p>
+<p><strong><a href="wk07/wk7-lab1-ethics-inline-edit.html">Week 7</a></strong> — Ethics in practice + accessibility audit</p>
+<p><strong><a href="wk08/wk8-lab1-prototyping-constraints.html">Week 8</a></strong> — Prototyping, constraints, no-JS parity</p>
+<p><strong><a href="wk09/wk9-lab1-eval-plan-instrumentation.html">Week 9</a></strong> — Evaluation planning + instrumentation</p>
+<p><strong><a href="wk10/wk10-lab1-analysis-prioritisation.html">Week 10</a></strong> — Analysis, prioritisation, redesign</p>
+<p><strong><a href="wk11/wk11-lab1-studio-crit.html">Week 11</a></strong> — Studio critique + portfolio wrap-up</p>
 <h3 id="semester-flow-weeks-6-11"><a class="header" href="#semester-flow-weeks-6-11">Semester Flow (Weeks 6-11)</a></h3>
 <pre class="mermaid">graph LR
   W6[Week 6&lt;br/&gt;Server-first&lt;br/&gt;Needs-finding]
@@ -281,13 +281,14 @@ People-first language centres the person, not a diagnostic label.</p>
 <hr />
 <h2 id="getting-started"><a class="header" href="#getting-started">Getting Started</a></h2>
 <ol>
-<li><strong>Read Week 6 Lab 1</strong>: <a href="wk06/src/wk6-lab1-html-css-htmx.html">Server-first foundations with HTMX</a></li>
+<li><strong>Read Week 6 Lab 1</strong>: <a href="wk06/wk6-lab1-html-css-htmx.html">Server-first foundations with HTMX</a></li>
 <li><strong>Clone starter pack</strong>: <code>git clone [repo URL]</code> (see Minerva for link)</li>
 <li><strong>Install/setup tools</strong>: JDK 17+, Gradle 8+, axe DevTools, IntelliJ IDEA (or) VSCode (or) Codespaces - choose one</li>
 <li><strong>Attend lab sessions</strong>: Bragg 2.05 Main Lab (check your timetable for days/times)</li>
 <li><strong>Independent Study</strong>: We expect you to manage your time and complete all module requirements</li>
 </ol>
 <hr />
+<p>a solutionmore complex solution</p>
 <h2 id="support"><a class="header" href="#support">Support</a></h2>
 <ul>
 <li><strong>Lab sessions</strong>: Staff on hand for questions (2-hour taught labs &amp; open lab sessions with TA's available)</li>
@@ -315,7 +316,7 @@ Ofili, Jonathan Pickering, Xiao Wang]
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
 
-                            <a rel="next prefetch" href="wk06/src/wk6-lab1-html-css-htmx.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="wk06/wk6-lab1-html-css-htmx.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -326,7 +327,7 @@ Ofili, Jonathan Pickering, Xiao Wang]
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
 
-                    <a rel="next prefetch" href="wk06/src/wk6-lab1-html-css-htmx.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="wk06/wk6-lab1-html-css-htmx.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
