--- a/print.html
+++ b/print.html
@@ -2148,12 +2148,12 @@ In **Week 7 Lab 1** you will:
 <li><a href="https://www.w3.org/WAI/WCAG22/Understanding/error-identification.html">W3C (2024). WCAG 2.2: 3.3.1 Error Identification</a></li>
 <li><a href="https://www.w3.org/WAI/WCAG22/Understanding/status-messages.html">W3C (2024). WCAG 2.2: 4.1.3 Status Messages</a></li>
 <li><a href="https://htmx.org/examples/click-to-edit/">HTMX: Click to Edit Pattern</a></li>
-<li><a href="wk07/../../references/example-accessible-inline-edit.html">Example: Accessible Inline Edit</a> (worked example)</li>
+<li><a href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/ARIA_Live_Regions">MDN: ARIA Live Regions</a></li>
 </ul>
 <p><strong>Recommended</strong></p>
 <ul>
 <li><a href="https://design-system.service.gov.uk/components/error-message/">GOV.UK: Error Message Pattern</a></li>
-<li><a href="https://www.deque.com/blog/aria-live-regions-updated/">Deque: ARIA Live Regions</a></li>
+<li><a href="wk07/../../references/example-accessible-inline-edit.html">Example: Accessible Inline Edit</a> (worked example with code)</li>
 <li><a href="wk07/../../references/privacy-by-design.html">Privacy by Design</a> (ethics framework)</li>
 </ul>
 <hr />
